Ajout du css du header de la page photographer

--- a/photographer.html
+++ b/photographer.html
@@ -22,9 +22,20 @@
     </header>
     <main id="main">
       <div class="photograph-header">
+        <div class="photographer-header__description">
+          <h1 class="name">Mimi Keel</h1>
+          <p class="city">London, UK</p>
+          <p class="tagline">Voir le beau au quotidien</p>
+        </div>
         <button class="contact_button" onclick="displayModal()">
           Contactez-moi
         </button>
+        <div class="photographer-header__img">
+          <img
+            src="/assets/photographers/MimiKeel.jpg"
+            alt="Mimi Keel"
+          />
+        </div>
       </div>
     </main>
     <div id="contact_modal">
