Réaliser du html css de la page de détail, il manque encore la modale des photos et du contact a réaliser avant de passer au javascript

--- a/photographer.html
+++ b/photographer.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/6983cb12c1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Fisheye - photographe</title>
   </head>
   <body>
@@ -36,6 +40,56 @@
             alt="Mimi Keel"
           />
         </div>
+      </div>
+      <div>
+        <div class="photo-sort">
+          <p class="photo-sort__title">Trier par</p>
+          <div class="custom-select">
+            <select>
+              <option value="0">Popularité</option>
+              <option value="1">Date</option>
+              <option value="2">Titre</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="card">
+          <img
+            src="/assets/images/Mimi/Animals_Rainbow.jpg"
+            alt="Oiseau arc en ciel"
+          />
+          <h3>Arc-en-cie</h3>
+          <p>12 <i class="fa-solid fa-heart"></i></p>
+        </div>
+        <div class="card">
+          <img
+            src="/assets/images/Mimi/Event_BenevidesWedding.jpg"
+            alt="Mariage"
+          />
+          <h3>Mariage</h3>
+          <p>12 <i class="fa-solid fa-heart"></i></p>
+        </div>
+        <div class="card">
+          <img
+            src="/assets/images/Mimi/Event_PintoWedding.jpg"
+            alt="Mariage"
+          />
+          <h3>Mariage</h3>
+          <p>12 <i class="fa-solid fa-heart"></i></p>
+        </div>
+        <div class="card">
+          <img
+            src="/assets/images/Mimi/Event_SeasideWedding.jpg"
+            alt="Mariage au bord de mer"
+          />
+          <h3>Mariage au bord de mer</h3>
+          <p>12 <i class="fa-solid fa-heart"></i></p>
+        </div>
+      </div>
+      <div class="like-price">
+        <p>297 081 <i class="fa-solid fa-heart"></i></p>
+        <p>300€ / jour</p>
       </div>
     </main>
     <div id="contact_modal">
