--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" alt="Fisheye Home page">
+      <a
+        href="/index.html"
+        alt="Fisheye Home page"
+        aria-label="Lien vers la page d'accueil de Fisheye"
+      >
         <img
           src="assets/images/logo.png"
           class="logo"
-          alt="Fisheye Logo"
+          alt="Logo de Fisheye"
         />
       </a>
       <h1>Nos photographes</h1>
     </header>
-    <main id="main">
+    <main id="main" role="main">
       <div class="photographer_section"></div>
     </main>
     <script src="scripts/templates/photographer.js"></script>
