--- a/photographer.html
+++ b/photographer.html
@@ -56,10 +56,11 @@
       <div class="gallery">
         <div class="card">
           <img
+            id="image1"
             src="/assets/images/Mimi/Animals_Rainbow.jpg"
             alt="Oiseau arc en ciel"
           />
-          <h3>Arc-en-cie</h3>
+          <h3 id="title1">Arc-en-cie</h3>
           <p>12 <i class="fa-solid fa-heart"></i></p>
         </div>
         <div class="card">
@@ -92,6 +93,11 @@
         <p>300€ / jour</p>
       </div>
     </main>
+    <div id="myModal" class="modal_picture">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01" />
+      <div id="caption"></div>
+    </div>
     <div id="contact_modal">
       <div class="modal">
         <header>
@@ -102,6 +108,12 @@
           <div>
             <label>Prénom</label>
             <input />
+            <label>Nom</label>
+            <input />
+            <label>Email</label>
+            <input />
+            <label>Votre message</label>
+            <textarea></textarea>
           </div>
           <button class="contact_button">Envoyer</button>
         </form>
