Header realiser en javascript

--- a/photographer.html
+++ b/photographer.html
@@ -4,28 +4,18 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/6983cb12c1.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/6983cb12c1.js" crossorigin="anonymous"></script>
     <title>Fisheye - photographe</title>
   </head>
   <body>
     <header>
       <a href="/index.html" alt="Fisheye Home page">
-        <img
-          src="assets/images/logo.png"
-          class="logo"
-          alt="Fisheye Logo"
-        />
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Logo" />
       </a>
     </header>
     <main id="main">
-      <div class="photograph-header">
+      <!-- <div class="photograph-header">
         <div class="photographer-header__description">
           <h1 class="name">Mimi Keel</h1>
           <p class="city">London, UK</p>
@@ -91,7 +81,7 @@
       <div class="like-price">
         <p>297 081 <i class="fa-solid fa-heart"></i></p>
         <p>300€ / jour</p>
-      </div>
+      </div> -->
     </main>
     <div id="myModal" class="modal_picture">
       <span class="close">&times;</span>
