Ajout du javascript pour réaliser le page photographer. Il manque encore les modals

--- a/photographer.html
+++ b/photographer.html
@@ -14,80 +14,7 @@
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Logo" />
       </a>
     </header>
-    <main id="main">
-      <!-- <div class="photograph-header">
-        <div class="photographer-header__description">
-          <h1 class="name">Mimi Keel</h1>
-          <p class="city">London, UK</p>
-          <p class="tagline">Voir le beau au quotidien</p>
-        </div>
-        <button class="contact_button" onclick="displayModal()">
-          Contactez-moi
-        </button>
-        <div class="photographer-header__img">
-          <img
-            src="/assets/photographers/MimiKeel.jpg"
-            alt="Mimi Keel"
-          />
-        </div>
-      </div>
-      <div>
-        <div class="photo-sort">
-          <p class="photo-sort__title">Trier par</p>
-          <div class="custom-select">
-            <select>
-              <option value="0">Popularité</option>
-              <option value="1">Date</option>
-              <option value="2">Titre</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <div class="gallery">
-        <div class="card">
-          <img
-            id="image1"
-            src="/assets/images/Mimi/Animals_Rainbow.jpg"
-            alt="Oiseau arc en ciel"
-          />
-          <h3 id="title1">Arc-en-cie</h3>
-          <p>12 <i class="fa-solid fa-heart"></i></p>
-        </div>
-        <div class="card">
-          <img
-            src="/assets/images/Mimi/Event_BenevidesWedding.jpg"
-            alt="Mariage"
-          />
-          <h3>Mariage</h3>
-          <p>12 <i class="fa-solid fa-heart"></i></p>
-        </div>
-        <div class="card">
-          <img
-            src="/assets/images/Mimi/Event_PintoWedding.jpg"
-            alt="Mariage"
-          />
-          <h3>Mariage</h3>
-          <p>12 <i class="fa-solid fa-heart"></i></p>
-        </div>
-        <div class="card">
-          <img
-            src="/assets/images/Mimi/Event_SeasideWedding.jpg"
-            alt="Mariage au bord de mer"
-          />
-          <h3>Mariage au bord de mer</h3>
-          <p>12 <i class="fa-solid fa-heart"></i></p>
-        </div>
-      </div>
-      <div class="like-price">
-        <p>297 081 <i class="fa-solid fa-heart"></i></p>
-        <p>300€ / jour</p>
-      </div> -->
-    </main>
-    <div id="myModal" class="modal_picture">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img01" />
-      <div id="caption"></div>
-    </div>
+    <main id="main"></main>
     <div id="contact_modal">
       <div class="modal">
         <header>
