Header 100% terminer avec le modele MVC !

--- a/photographer.html
+++ b/photographer.html
@@ -14,7 +14,9 @@
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Logo" />
       </a>
     </header>
-    <main id="main"></main>
+    <main id="main">
+      <div class="photographer-header">...loader</div>
+    </main>
 
     <!-- Picture Modal -->
 
@@ -64,7 +66,13 @@
         </form>
       </div>
     </div>
-    <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/mvc/helpers.js"></script>
+    <script src="/scripts/mvc/store.js"></script>
+    <script src="/scripts/mvc/model.js"></script>
+    <script src="/scripts/mvc/template.js"></script>
+    <script src="/scripts/mvc/view.js"></script>
+    <script src="/scripts/mvc/controller.js"></script>
+    <script src="/scripts/mvc/app.js"></script>
   </body>
 </html>
