--- a/scripts/mvc/index.html
+++ b/scripts/mvc/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../../css/photographer.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
   </head>
   <body>
-    <h1>List</h1>
-    <div class="cards">...loader</div>
-
-    <div>
-      <h2>Autre</h2>
-    </div>
+    <br />
+    <div class="photographer-header">...loader</div>
   </body>
 
+  <script src="helpers.js"></script>
   <script src="store.js"></script>
   <script src="model.js"></script>
   <script src="template.js"></script>
