--- a/photographer.html
+++ b/photographer.html
@@ -16,6 +16,7 @@
     </header>
     <main id="main">
       <div class="photographer-header">...loader</div>
+      <div class="photographer-gallery">...loader</div>
     </main>
 
     <!-- Picture Modal -->
