Modal parfaite ! Il reste plus qu'a réaliser l'event pour le left et right arrow

--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
       <div class="photographer-gallery">...loader</div>
     </main>
 
-    <!-- Picture Modal -->
+    <!-- Media Modal -->
 
     <dialog id="media_modal" aria-label="image closeup view"></dialog>
 
