Rajout du petit encadré avec les likes et le price

--- a/photographer.html
+++ b/photographer.html
@@ -19,6 +19,10 @@
       <div class="photographer-gallery">...loader</div>
     </main>
 
+    <!-- Likes & Price -->
+
+    <div class="likes_price"></div>
+
     <!-- Media Modal -->
 
     <dialog id="media_modal" aria-label="image closeup view"></dialog>
