Ajout de la fonction pour les likes

--- a/photographer.html
+++ b/photographer.html
@@ -21,7 +21,7 @@
 
     <!-- Likes & Price -->
 
-    <div class="likes_price"></div>
+    <div class="likes-price"></div>
 
     <!-- Media Modal -->
 
