Ajout d'une fonction pour que la tabulation fonctionne dans la modale de contact

--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
@@ -26,27 +26,7 @@
 
     <!-- Media Modal -->
 
-    <dialog id="media_modal" aria-label="image closeup view">
-      <form method="dialog">
-        <button class="media_close">
-          <img src="assets/icons/close_picture.svg" />
-        </button>
-      </form>
-      <div class="media_modal_button">
-        <button id="left_arrow">
-          <img src="assets/icons/arrow.svg" />
-        </button>
-        <div class="media_modal_content">
-          ${mediaContent}
-          <!-- J'insère l'image ou la vidéo ici. -->
-          <h2 id="media_modal_title">${media.title}</h2>
-          <!-- J'utilise le titre du média. -->
-        </div>
-        <button id="right_arrow">
-          <img src="assets/icons/arrow.svg" />
-        </button>
-      </div>
-    </dialog>
+    <dialog id="media_modal" aria-label="image closeup view"></dialog>
 
     <!-- Contact Modal -->
 
