--- a/photographer.html
+++ b/photographer.html
@@ -36,23 +36,29 @@
           <div id="modal_header">
             <h2>Contactez-moi</h2>
           </div>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <img
+            alt="Button pour fermer la modale"
+            tabindex="0"
+            src="assets/icons/close.svg"
+            id="close-modal"
+          />
         </header>
         <form class="contact_form">
           <div>
-            <label>Prénom</label>
-            <input type="text" id="name" name="name" />
-            <label>Nom</label>
+            <label for="firstName">Prénom</label>
             <input type="text" id="firstName" name="firstName" />
-            <label>Email</label>
+            <label for="lastName">Nom</label>
+            <input type="text" id="lastName" name="lastName" />
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" />
-            <label>Votre message</label>
-            <textarea type="text" id="message" name="message"></textarea>
+            <label for="message">Votre message</label>
+            <textarea id="message" name="message"></textarea>
           </div>
           <button onclick="submitContact()" type="button" class="contact_button">Envoyer</button>
         </form>
       </div>
     </div>
+
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="/scripts/mvc/helpers.js"></script>
     <script src="/scripts/mvc/store.js"></script>
