--- a/index.html
+++ b/index.html
@@ -4,28 +4,17 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet" />
     <title>Fisheye</title>
   </head>
   <body>
     <header>
-      <a
-        href="/index.html"
-        alt="Fisheye Home page"
-        aria-label="Lien vers la page d'accueil de Fisheye"
-      >
-        <img
-          src="assets/images/logo.png"
-          class="logo"
-          alt="Logo de Fisheye"
-        />
+      <a href="/index.html" aria-label="Lien vers la page d'accueil de Fisheye">
+        <img src="assets/images/logo.png" class="logo" alt="Logo de Fisheye" />
       </a>
       <h1>Nos photographes</h1>
     </header>
-    <main id="main" role="main">
+    <main id="main">
       <div class="photographer_section"></div>
     </main>
     <script src="scripts/templates/photographer.js"></script>
