--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html" alt="Fisheye Home page">
+      <a href="/index.html" aria-label="Lien vers la page d'accueil de Fisheye">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Logo" />
       </a>
     </header>
